- fix blurry sweetalert modals

--- a/frontend/src/assets/scss/app.scss
+++ b/frontend/src/assets/scss/app.scss
@@ -5,3 +5,7 @@ $google-plus: #dd4b39 !default;
 .btn-outline-google-plus {
     @include button-outline-variant($google-plus);
 }
+
+.swal-modal {
+  will-change: unset!important;
+}
